src/scss/_partials/_card.scss
.card {
	text-align: center;
	vertical-align: top;
	z-index: 100;

	.card-header {
		display:block;
		padding: 15px 0 25px;
		
		.card-title {
			color: #000;
			cursor: pointer;
			font-size: 0.941176471em;
			font-weight: bold;
		}
		
		.card-sub-title {
			color: $light-gray;
			font-size: 0.823529412em;
			margin-top: 5px;

			.icon-marker {
				margin-right: 5px;
			}
		}

		.send-message-button {
			float: right;
			margin-right: 4%;
			margin-top: -50px;
		}
	}
	.card-icons {
		.absolute-wrapper {
			margin: -17.5px auto -17.5px auto;
			position: absolute;
			text-align: center;
			width: 100%;
			z-index: 11111;

			.icon-wrapper {
				margin: 0 5px 0 5px !important;
				vertical-align: top;

				.icon-web-site {
					font-size: 2.5em !important;
					line-height: 33px !important;
				}
				.icon-photo {
					font-size: 1.3em !important;
				}
				.icon-video {
					font-size: 1.2em !important;
				}
				.icon-youtube {
					font-size: 2.5em !important;
				}
				.icon-audio {
					font-size: 1.3em !important;
				}
				.icon-twitter {
					font-size: 2.2em !important;
				}
				.icon-spotify {
					font-size: 2.5em !important;
				}
				.icon-facebook {
					font-size: 2.5em !important;
				}
			}

			.link-icon-wrapper {
				background-color: $orange-link !important;
			}

			.spotify-icon-wrapper {
				background-color: $spotify-green !important;
			}

			.twitter-icon-wrapper {
				background-color: $twitter-blue !important;
			}

			.youtube-icon-wrapper {
				background-color: $youtube-red !important;
			}

			.facebook-icon-wrapper {
				background-color: $facebook-blue !important;
			}
		}
	}
	.card-content {
		cursor: pointer;

		.card-content-inner {
			min-height: 50px;
			padding: 0;
			overflow: hidden;

			.discover-video {
				width: 100%;
			}
			.image img {
				border-radius: 2px 2px 0 0;
				width: 100%;
				vertical-align: middle;
			}
			.image.fixed-max-height-image {
				max-height: 500px;
				overflow: hidden;
			}
			.image.fixed-height-image {
				height: 222.23px;
				overflow: hidden;
				.loading-gif{
					background-size: 222.23px 222.23px !important;
					height: 222.23px !important;
					width: 222.23px !important;
				}
			}
			.matching {
				margin-top: -32px;
				position: relative;

				.matching-value {
					color: #fff;
					margin-bottom: 5px;
				}
			}
		}
	}

	.card-footer {
		display: block;
		.like-button {
			margin-left: -5px;
			margin-right: 15px;
			.yellow {
				color: $material-yellow !important;
			}
		}
	}

	&.person-card {
		cursor: pointer;

		.card-header {
			padding: 0;
			z-index: 1;
			.online-status {
				font-size: 0.8em;
				color: $light-green;
				font-weight: bold;
			}
		}
		.card-content {
			.card-content-inner {
				.like-icon-container {
					color: $material-orange-light;
					margin: auto;
					position: absolute;
					right: 15px;
					top: 10px;

					.icon-star {
						&:before {
							font-size: 1.3em;
						}
					}
				}
				.matching {
					margin-top: -7px;
				}
			}
		}
		.card-footer {
			.card-title {
				font-weight: bold;
				padding: 10px;
				overflow: hidden;
				text-overflow: ellipsis;
				width: 90%;
				white-space: nowrap;
			}
			.matching-value {
				color: $regular-gray;
				display: inline-flex;
				font-weight: bold;
				margin: 5px auto;
				width: 100%;

				.matching-string {
					display: inline-block;
					margin: auto;
					white-space: nowrap;
					overflow: hidden;
					text-overflow: ellipsis;
				}
				.matching-percentage {
					display: inline-block;
					margin: auto;
					width: 31px;
				}
			}

			.matching-progress {
				.progress-bar [class^="progress-bar-"], .progress-bar [class*=" progress-bar-"] {
					background-color: $flesh-colored;
				}
			}

			.progress-bar {
				height: 20px;
				margin-top: -25px;
				margin-left: -15px;
				opacity: 0.6;
				position: absolute;
			}
			.progress-bar [class^="progress-bar-"], .progress-bar [class*=" progress-bar-"] {
				color: #bbb;
				height: 20px;
			}

			&::before {
				height: 0;
			}
		}
	}

	&.content-card {
		.card-drop-down-menu {
			color: $material-grey;
			cursor: pointer;
			position: absolute;
			right: 5px;
			top: 5px;
			width: 20px;
			z-index: 111111;
		}
		.card-title {
			padding-left: 25px;
			padding-right: 25px;
			word-wrap: break-word;

			a {
				color: #000;
			}
		}

	}
}

